# LiLM-Mal

./: .gitignore  README.md  download_model.py  push_16k_to_hf.sh  pyproject.toml  run_tests.sh
baseline-linear/: main.py
baseline-xgboost/: main.py
quen-1b-lora-classic-ddp/: config.py  lilm_mal_dataset.py  main.py  model.py
quen-1b-unfroze-ddp/: lilm_mal_dataset.py  main.py  model.py  train_logic.py
quen-3b-unfroze-fsdp/: config.py  lilm_mal_dataset.py  main.py  model.py  train_logic.py
quen-7b-unfroze-fdsp/: analyze_tokens.py  main.py
qwen-1b-lora-classic-ddp/: config.py  lilm_mal_dataset_v2.py  main.py  model.py  test_elf_set.py  test_pe_set.py  utils.py
qwen-1b-unfroze-ddp/: config.py  main.py  test_elf_set.py  utils.py
qwen-3b-lora-classic-ddp/: config.py  lilm_mal_dataset.py  main.py  model.py  test_elf_set.py  test_pe_set.py  train_logic.py
qwen-3b-unfroze-fsdp/: config.py  lilm_mal_dataset.py  main.py  test_elf_set.py  test_pe_set.py  train_logic.py  utils.py
qwen-7b-unfroze-fdsp/: config.py  lilm_mal_dataset.py  model.py  plotting.py  train_logic.py  utils.py
qwen-lora-2.0/conf/: config.yaml
qwen-lora-2.0/doc/: compressor-distillation.md
qwen-lora-2.0/qwen-compressor-distillation/: README.md  compressor_model.py  main.py  precompute_teacher.py  segment_dataset.py  train_logic.py  utils.py
tests/: adversarial_decompile.py  inference.py
threshold-tuning/: config.py  eval_val_all_models.py  lilm_mal_dataset.py  main.py  threshold_tuning.py  utils.py
tokenirez_analysis/: main.py  tokenizer_statistics.json  tokenizer_statistics_pe.json
(+40 files in other folders)
