[project]
name = "lilm-mal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "flash-attn>=2.8.3",
    "huggingface-hub>=1.7.2",
    "hydra-core>=1.3.4",
    "matplotlib>=3.10.8",
    "orjson>=3.11.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
    "xgboost>=3.2.0",
]
